# react-native-hnswlib

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-hnswlib.podspec  tsconfig.json
.github/workflows/: ci.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/hnswlib/: HnswlibModule.java  HnswlibPackage.java
android/src/newarch/: HnswlibSpec.java
android/src/oldarch/: HnswlibSpec.java
cpp/: HierarchicalNSW.hpp  RnJsiContext.hpp  RnJsiHostClass.hpp  helper.h  react-native-hnswlib.cpp  react-native-hnswlib.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle  proguard-rules.pro
example/android/app/src/main/java/com/hnswlibexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/HnswlibExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/HnswlibExample.xcodeproj/: project.pbxproj
example/ios/HnswlibExample.xcodeproj/xcshareddata/xcschemes/: HnswlibExample.xcscheme
example/ios/HnswlibExampleTests/: HnswlibExampleTests.m
example/src/: App.tsx
ios/: Hnswlib.h  Hnswlib.mm
src/: NativeHnswlib.ts  index.tsx  type.d.ts
